--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
@@ -24,6 +24,9 @@ master.page.academy.signup			= Academy
 master.page.dancer.signup			= Dancer
 
 
+master.page.poll.list				= Catalogue of Polls
+
+
 master.page.cookies					= Cookies
 master.page.lopd					= Terms and services
 master.page.lssi					= Contact
