--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages_es.properties
@@ -19,6 +19,9 @@ master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 
 
+master.page.poll.list				= Catálogo de encuestas
+
+
 master.page.cookies					= Cookies
 master.page.lopd					= Términos y condiciones
 master.page.lssi					= Contacto
