--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
@@ -16,7 +16,7 @@ poll.title = Title
 poll.ticket = Ticket
 poll.description= Description
 poll.banner=Banner
-poll.timeActive = TimeActive;
+poll.timeActive = TimeActive
 
 acme.edit=editar
 acme.delete=eliminar
