--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
@@ -17,7 +17,7 @@ poll.title = Título
 poll.ticket = Ticket
 poll.description= Descripción
 poll.banner=Baner
-poll.timeActive = Activado;
+poll.timeActive = Activado
 
 acme.edit=editar
 acme.delete=eliminar
