--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages_es.properties
@@ -29,3 +29,6 @@ master.page.lssi					= Contacto
 master.page.login 					= Entrar
 master.page.logout 					= Salir
 
+
+master.page.administrator.edit = Editar
+
