--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
@@ -18,6 +18,7 @@ poll.ticket = Ticket
 poll.description= Descripción
 poll.banner=Baner
 poll.timeActive = Activado
+poll.poller= Encuestador
 
 acme.edit=editar
 acme.delete=eliminar
