--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
@@ -34,3 +34,5 @@ master.page.lssi					= Contact
 master.page.login 					= Login
 master.page.logout 					= Logout
 
+master.page.administrator.edit = Edit
+
