--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
@@ -17,6 +17,7 @@ poll.ticket = Ticket
 poll.description= Description
 poll.banner=Banner
 poll.timeActive = TimeActive
+poll.poller= Poller
 
 acme.edit=editar
 acme.delete=eliminar
