--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
@@ -35,4 +35,5 @@ master.page.login 					= Login
 master.page.logout 					= Logout
 
 master.page.administrator.edit = Edit
+ master.page.poller.edit = Edit
 
