--- a/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
@@ -19,6 +19,8 @@ admin.commit.error					=	Failed to commit
 admin.userAccount.username			= Username
 admin.userAccount.password			= Password
 
+admin.address					=	Address
+
 admin.actorName						=	Name
 admin.surname						=	Surname
 admin.email							=	Email
