--- a/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages_es.properties
@@ -22,6 +22,7 @@ admin.postal			= Direccion postal
 admin.city			= Ciudad
 admin.country		= Pais
 
+admin.address					=	Dirección
 
 actor.commit.error					=	Fallo al hacer commit
 admin.commit.error					=	Fallo al hacer commit
