--- a/Proyecto/Acme-Poll/src/main/webapp/views/poller/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poller/messages.properties
@@ -23,7 +23,7 @@ poller.actorName						=	Name
 poller.surname						=	Surname
 poller.email							=	Email
 poller.phone							=	Phone
-poller.postalAddress					=	Postal address
+poller.address					=	Address
 poller.city							=	City
 poller.country						=	Country
 
