--- a/Proyecto/Acme-Poll/src/main/webapp/views/poller/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poller/messages_es.properties
@@ -22,6 +22,7 @@ poller.country		= Pais
 actor.commit.error					=	Fallo al hacer commit
 poller.commit.error					=	Fallo al hacer commit
 
+poller.address					=	Dirección
 poller.actorName						=	Nombre
 poller.surname						=	Apellidos
 poller.email							=	Email
