Hecho la parte de bannear un poller.

--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
@@ -19,6 +19,9 @@ poll.banner=Banner
 poll.timeActive = TimeActive
 poll.poller= Poller
 
+poller.banned = Ban
+poller.readmit = Readmit
+
 acme.edit=editar
 acme.delete=eliminar
 
