--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
@@ -20,5 +20,8 @@ poll.banner=Baner
 poll.timeActive = Activado
 poll.poller= Encuestador
 
+poller.banned = Banear
+poller.readmit = Readmitir
+
 acme.edit=editar
 acme.delete=eliminar
