Hecha la parte del dashboard correspondiente.

--- a/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
@@ -41,3 +41,12 @@ actor.delete								=	Delete
 actor.save								=	Save
 actor.cancel								=	Cancel
 actor.clear								=	Clear
+
+
+dashboard.min				= Minimun
+dashboard.max				= Maximun
+dashboard.avg 				= Average
+dashboard.std				= Standard deviation
+dashboard.findMinAvgStdMaxPollsByPoller = The minimum, the average, the standard deviation, and the maximum number of polls per poller.
+dashboard.findMinAvgStdMaxInstancesByPoll  = The minimum, the average, the standard deviation, and the maximum number of instances per poll.
+
