Requisitos 8.1 y 8.2(las dos primeras querys) hechos y probados. Falta el requisito no funcional que estoy esperando a que se suba todo para hacerlo.

--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
@@ -25,6 +25,7 @@ master.page.dancer.signup			= Dancer
 
 
 master.page.poll.list				= Catalogue of Polls
+master.page.administrator.poller = Pollers list
 
 
 master.page.cookies					= Cookies
@@ -35,5 +36,6 @@ master.page.login 					= Login
 master.page.logout 					= Logout
 
 master.page.administrator.edit = Edit
+master.page.administrator.dashboard = Dashboard
  master.page.poller.edit = Edit
 
