--- a/Proyecto/Acme-Poll/src/main/webapp/views/poller/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poller/messages.properties
@@ -39,3 +39,7 @@ actor.delete								=	Delete
 actor.save								=	Save
 actor.cancel								=	Cancel
 actor.clear								=	Clear
+poller.banned							= Banned
+poller.ban								= Ban
+poller.unbanned							= No banned
+poller.readmit							= Readmit
