--- a/Proyecto/Acme-Poll/src/main/webapp/views/poller/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poller/messages_es.properties
@@ -47,3 +47,8 @@ actor.cancel								=	Cancelar
 actor.clear								=	Limpiar
 
 userAccount.username					= campo obligatorio
+
+poller.banned							= Baneado
+poller.ban								= Banear
+poller.unbanned							= No baneado
+poller.readmit							= Readmitir
