--- a/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
@@ -47,6 +47,6 @@ dashboard.min				= Minimun
 dashboard.max				= Maximun
 dashboard.avg 				= Average
 dashboard.std				= Standard deviation
-dashboard.findMinAvgStdMaxPollsByPoller = The minimum, the average, the standard deviation, and the maximum number of polls per poller.
-dashboard.findMinAvgStdMaxInstancesByPoll  = The minimum, the average, the standard deviation, and the maximum number of instances per poll.
+dashboard.findMinAvgStdMaxPollsByPoller = The minimum, the average, the standard deviation, and the maximum number of polls per poller
+dashboard.findMinAvgStdMaxInstancesByPoll  = The minimum, the average, the standard deviation, and the maximum number of instances per poll
 
