--- a/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages_es.properties
@@ -57,5 +57,5 @@ dashboard.min				= Mínimo
 dashboard.max				= Máximo
 dashboard.avg 				= Media
 dashboard.std				= Desviación típica
-dashboard.findMinAvgStdMaxPollsByPoller = El mínimo, la media, la desviación típica, y el número máximo de encuestas por encuestador.
-dashboard.findMinAvgStdMaxInstancesByPoll  = El mínimo, la media, la desviación típica, y el número máximo de instancias por encuesta.
+dashboard.findMinAvgStdMaxPollsByPoller = El mínimo, la media, la desviación típica, y el número máximo de encuestas por encuestador
+dashboard.findMinAvgStdMaxInstancesByPoll  = El mínimo, la media, la desviación típica, y el número máximo de instancias por encuesta
