--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages_es.properties
@@ -31,5 +31,6 @@ master.page.logout 					= Salir
 
 
 master.page.administrator.edit = Editar
+master.page.administrator.dashboard = Dashboard
 master.page.poller.edit = Editar
-
+master.page.administrator.poller = Lista de sondeadores
