Arreglado conflictos con el modelo

--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
@@ -11,13 +11,15 @@
 
 poll.commit.error					=	Error al hacer commit
 poll.questions = Cuestiones
+poll.result = Resultados
 poll.instances = Instancias
 
 poll.title = Título
 poll.ticket = Ticket
 poll.description= Descripción
 poll.banner=Baner
-poll.timeActive = Activado
+poll.startDate = Fecha Inicio
+poll.endDate = Fecha Fin
 poll.poller= Encuestador
 
 poller.banned = Banear
