--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
@@ -10,13 +10,15 @@
 
 poll.commit.error					=	Failed to commit
 poll.questions = Questions
+poll.result = Results
 poll.instances = Instances
 
 poll.title = Title
 poll.ticket = Ticket
 poll.description= Description
 poll.banner=Banner
-poll.timeActive = TimeActive
+poll.startDate = Start Date
+poll.endDate = End Date
 poll.poller= Poller
 
 poller.banned = Ban
