--- a/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
@@ -49,4 +49,4 @@ dashboard.avg 				= Average
 dashboard.std				= Standard deviation
 dashboard.findMinAvgStdMaxPollsByPoller = The minimum, the average, the standard deviation, and the maximum number of polls per poller
 dashboard.findMinAvgStdMaxInstancesByPoll  = The minimum, the average, the standard deviation, and the maximum number of instances per poll
-
+dashboard.findMinAvgStdMaxQuestionByPoll = The minimum, the average, the standard deviation, and the maximum number of question per poll
