--- a/Proyecto/Acme-Poll/src/main/webapp/views/choice/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/choice/messages.properties
@@ -8,20 +8,5 @@
 
 # REME
 
-poll.commit.error					=	Failed to commit
-poll.questions = Questions
-poll.instances = Instances
-
-poll.title = Title
-poll.ticket = Ticket
-poll.description= Description
-poll.banner=Banner
-poll.timeActive = TimeActive
-poll.poller= Poller
-
-poller.banned = Ban
-poller.readmit = Readmit
-
-acme.edit=editar
-acme.delete=eliminar
+choice.text		= Text
 
