--- a/Proyecto/Acme-Poll/src/main/webapp/views/choice/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/choice/messages_es.properties
@@ -9,19 +9,4 @@
 
 # REME
 
-poll.commit.error					=	Error al hacer commit
-poll.questions = Cuestiones
-poll.instances = Instancias
-
-poll.title = Título
-poll.ticket = Ticket
-poll.description= Descripción
-poll.banner=Baner
-poll.timeActive = Activado
-poll.poller= Encuestador
-
-poller.banned = Banear
-poller.readmit = Readmitir
-
-acme.edit=editar
-acme.delete=eliminar
+choice.text		= Texto
