--- a/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages.properties
@@ -6,22 +6,9 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-# REME
 
-poll.commit.error					=	Failed to commit
-poll.questions = Questions
-poll.instances = Instances
 
-poll.title = Title
-poll.ticket = Ticket
-poll.description= Description
-poll.banner=Banner
-poll.timeActive = TimeActive
-poll.poller= Poller
-
-poller.banned = Ban
-poller.readmit = Readmit
-
-acme.edit=editar
-acme.delete=eliminar
-
+answer.save			= Save
+answer.name			= Name
+answer.gender		= Gender
+answer.city			= City
