--- a/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages_es.properties
@@ -7,21 +7,9 @@
 # http://www.tdg-seville.info/License.html
 
 
-# REME
 
-poll.commit.error					=	Error al hacer commit
-poll.questions = Cuestiones
-poll.instances = Instancias
 
-poll.title = Título
-poll.ticket = Ticket
-poll.description= Descripción
-poll.banner=Baner
-poll.timeActive = Activado
-poll.poller= Encuestador
-
-poller.banned = Banear
-poller.readmit = Readmitir
-
-acme.edit=editar
-acme.delete=eliminar
+answer.save			= Guardar
+answer.name			= Nombre
+answer.gender		= Sexo
+answer.city			= Ciudad
