--- a/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages_es.properties
@@ -12,6 +12,8 @@
 answer.save			= Guardar
 answer.name			= Nombre
 answer.gender		= Sexo
+
 answer.city			= Ciudad
+answer.alert		= Debe responder todas las preguntas y rellenar todos los campos
 
 answer.commit.error	= Error inesperado al guardar, inténtelo de nuevo
