--- a/Proyecto/Acme-Poll/src/main/webapp/views/hint/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/hint/messages_es.properties
@@ -11,3 +11,6 @@
 
 hint.text		= Consejo
 hint.mark		= Media de estrellas
+hint.create		= Escribir consejo
+hint.state		= Puntuar
+hint.alert		= El valor debe estar comprendido entre 0 y 10
