--- a/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages.properties
@@ -11,5 +11,8 @@
 answer.save			= Save
 answer.name			= Name
 answer.gender		= Gender
+
+
+answer.alert		= Must answer all the questions and fill in all the fields 
 answer.city			= City
 answer.commit.error	= Error unexpected, try it again
