--- a/Proyecto/Acme-Poll/src/main/webapp/views/hint/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/hint/messages.properties
@@ -10,4 +10,7 @@
 
 hint.text		= Hint
 hint.mark		= Average of stars
+hint.create		= Write hint
+hint.state		= Score
+hint.alert		= The value must be between 0 and 10
 
