--- a/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages.properties
@@ -7,12 +7,12 @@
 # http://www.tdg-seville.info/License.html
 
 
-
+must.be.gender = Pattern must be MALE or FEMALE
 answer.save			= Save
 answer.name			= Name
 answer.gender		= Gender
 
 
-answer.alert		= Must answer all the questions and fill in all the fields 
+answer.alert		= Must answer all the questions
 answer.city			= City
 answer.commit.error	= Error unexpected, try it again
