--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
@@ -38,3 +38,5 @@ poll.answer	= Answer
 poll.result	= Result
 
 poll.invalid	= Invalid poll
+
+error.startDate = The start date cant be after of the end date
