--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
@@ -37,3 +37,5 @@ poll.answer	= Responder
 poll.result	= Resultados
 
 poll.invalid	= Encuesta invalida
+
+error.startDate = La fecha de inicio no puede ser posterior a la fecha de fin
