Subida el nivel A a falta de ponerle seguridad

--- a/Proyecto/Acme-Poll/src/main/webapp/views/actor/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/actor/messages.properties
@@ -7,11 +7,6 @@
 # http://www.tdg-seville.info/License.html
 
 
-# REME
-
-chirp.moment				=Momento
-chirp.text					=Texto
-
-actor.commit.error				=Error
-
-chirp.create				=Nuevo Chirp
+actor.name			=Name
+actor.chirps		= Chirps
+chirp.create		= New Chirp
