--- a/Proyecto/Acme-Poll/src/main/webapp/views/actor/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/actor/messages_es.properties
@@ -6,12 +6,6 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-
-# REME
-
-chirp.moment				=Momento
-chirp.text					=Texto
-
-actor.commit.error				=Error
-
-chirp.create				=Nuevo Chirp
+actor.chirps		= Chirps
+actor.name			=Name
+chirp.create		= Nuevo Chirp
