--- a/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages.properties
@@ -55,3 +55,5 @@ dashboard.findMinAvgMaxHintsByPoll = The minimum, the average, and the maximum n
 dashboard.findPollWithMoreHints = The polls with more hints
 dashboard.findPollWithFewerHints = The polls with fewer hints
 dashboard.findPollWithHintsAbogeAverage = The polls that have hints whose usefulness is above the average
+dashboard.avgChirpActor					= The average number of chirps per actor
+dashboard.actorsAboveAvg				= The actors who chirp above the average
