--- a/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/administrator/messages_es.properties
@@ -67,4 +67,5 @@ dashboard.findPollWithMoreHints = Encuestas con mayor número de consejos
 dashboard.findPollWithFewerHints = Encuestas con menor número de consejos
 dashboard.findPollWithHintsAbogeAverage = Encuestas con consejos cuya puntuacion es mayor a la media
 
-
+dashboard.avgChirpActor					= La media de chirps por actor
+dashboard.actorsAboveAvg				= Los actores que superan la media de chirps
