--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages.properties
@@ -43,3 +43,8 @@ master.page.administrator.dashboard = Dashboard
 master.page.poller.poll.list 	= My polls
 
 master.page.validPeriod.edit	= Minimun period
+
+
+master.page.chirps				=Chirps
+master.page.chirp				=Chirps General
+master.page.mychirp				=My Chirps
