--- a/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/master-page/messages_es.properties
@@ -39,3 +39,8 @@ master.page.administrator.poller = Lista de sondeadores
 master.page.poller.poll.list 	= Mis encuestas
 
 master.page.validPeriod.edit	= Periodo minimo
+
+
+master.page.chirps				=Chirps
+master.page.chirp				=Chirps General
+master.page.mychirp				=Mis Chirps
