--- a/Proyecto/Acme-Poll/src/main/webapp/views/chirp/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/chirp/messages.properties
@@ -8,20 +8,9 @@
 
 # REME
 
-poll.commit.error					=	Failed to commit
-poll.questions = Questions
-poll.instances = Instances
+chirp.moment				=Moment
+chirp.text					=Text
 
-poll.title = Title
-poll.ticket = Ticket
-poll.description= Description
-poll.banner=Banner
-poll.timeActive = TimeActive
-poll.poller= Poller
+actor.commit.error				=Error
 
-poller.banned = Ban
-poller.readmit = Readmit
-
-acme.edit=editar
-acme.delete=eliminar
-
+chirp.create				= New Chirp
