CORRECION DE ERROR, FECHA NULA. BOTON CANCELAR LLEVABA A URL QUE NO EXISTE

--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
@@ -12,7 +12,8 @@ poll.commit.error					=	Failed to commit
 poll.questions = Questions
 poll.result = Results
 poll.instances = Instances
-
+poll.save	= Save
+poll.cancel= Cancel
 poll.title = Title
 poll.ticket = Ticket
 poll.description= Description
