--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
@@ -31,7 +31,9 @@ poller.readmit = Readmitir
 acme.edit=editar
 acme.delete=eliminar
 
-poll.search= Buscar
+poll.search		= Buscar
+poll.save		= Guardar
+poll.cancel		= Cancelar
 
 poll.answer	= Responder
 poll.result	= Resultados
