FALLOS arreglados con fechas

--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
@@ -18,7 +18,7 @@ poll.title = Title
 poll.ticket = Ticket
 poll.description= Description
 poll.banner=Banner
-
+error.startDate1	= Must to be future
 poll.startDate = Start Date
 poll.endDate = End Date
 
