--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
@@ -34,7 +34,7 @@ acme.delete=eliminar
 poll.search		= Buscar
 poll.save		= Guardar
 poll.cancel		= Cancelar
-
+error.startDate1	= Debe ser futuro
 poll.answer	= Responder
 poll.result	= Resultados
 
