--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages.properties
@@ -8,6 +8,9 @@
 
 # REME
 
+poll.editAnswers							= Edit questions
+
+
 poll.commit.error					=	Failed to commit
 poll.questions = Questions
 poll.result = Results
