--- a/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/poll/messages_es.properties
@@ -9,6 +9,8 @@
 
 # REME
 
+poll.editAnswers							= Editar preguntas
+
 poll.commit.error					=	Error al hacer commit
 poll.questions = Cuestiones
 poll.result = Resultados
