--- a/Proyecto/Acme-Poll/src/main/webapp/views/question/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/question/messages.properties
@@ -7,8 +7,11 @@
 # http://www.tdg-seville.info/License.html
 
 # REME
-
+choices.error = 2 minimum
+question.choices	= Choices
+acme.create		= Create
 question.statment = Statment
 question.choices  = Choices
 question.number  = Number
 
+acme.commit.error = Unexpected fail, try again
