--- a/Proyecto/Acme-Poll/src/main/webapp/views/question/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/question/messages_es.properties
@@ -8,7 +8,11 @@
 
 
 # REME
-
+choices.error	= Minimo 2
+question.choices = Respuestas
+acme.create		= Crear
 question.statment = Enunciado
 question.choices  = Opciones
 question.number  = Numero
+
+acme.commit.error = Fallo inesperado, vuelva a intentarlo
