MEJORAS DE 100TÍFICO

--- a/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages.properties
@@ -11,7 +11,7 @@ must.be.gender 		=  The gender must be MALE (HOMBRE) o FEMALE (MUJER)
 answer.save			= Save
 answer.name			= Name
 answer.gender		= Gender
-
+coockies.alert1		= Poll visited yet
 
 answer.alert		= Must answer all the questions
 answer.city			= City
