--- a/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages_es.properties
+++ b/Proyecto/Acme-Poll/src/main/webapp/views/answer/messages_es.properties
@@ -13,6 +13,8 @@ answer.save			= Guardar
 answer.name			= Nombre
 answer.gender		= Sexo
 
+coockies.alert1		= Encuesta ya visitada
+
 answer.city			= Ciudad
 answer.alert		= Debe responder todas las preguntas
 
